2008-02-11  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	Small improvements.

2008-02-09  kitone  <kitone@gna.org>

	* src/CommandSystem.cc:
	Fix #11019 (https://gna.org/bugs/?11019)

2008-02-07  kitone  <kitone@gna.org>

	* src/actions/ChangeFramerate.cc:
	* src/actions/DocumentManagement.cc:
	Replace the direct call to DocumentSystem::getAllDocument
	by SubtitleEditorWindow::get_documents.

2008-02-07  kitone  <kitone@gna.org>

	* src/Document.h:
	* src/DocumentSystem.h:
	* src/SubtitleEditorWindow.h:
	* src/gui/Application.cc:
	* src/gui/Application.h:
	Add function 'get_documents'.

2008-02-07  kitone  <kitone@gna.org>

	* src/gui/Application.cc:
	* src/gui/Application.h:
	Delete unsued function.

2008-02-07  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-02-06  kitone  <kitone@gna.org>

	* depcomp:
	* install-sh:
	* missing:
	* mkinstalldirs:
	Remove files from SVN

2008-02-06  kitone  <kitone@gna.org>

	* aclocal.m4:
	Remove file from SVN

2008-02-06  kitone  <kitone@gna.org>

	* Makefile.in:
	* config.guess:
	* config.h.in:
	* config.sub:
	* share/Makefile.in:
	* share/glade/Makefile.in:
	* share/icons/16x16/Makefile.in:
	* share/icons/22x22/Makefile.in:
	* share/icons/24x24/Makefile.in:
	* share/icons/32x32/Makefile.in:
	* share/icons/Makefile.in:
	* share/icons/scalable/Makefile.in:
	* src/Makefile.in:
	Remove files from SVN

2008-02-06  kitone  <kitone@gna.org>

	* configure:
	Remove file in SVN

2008-02-05  kitone  <kitone@gna.org>

	* configure:
	* configure.in:
	Switching back to development version.

2008-02-05  kitone  <kitone@gna.org>

	* configure:
	* configure.in:
	Preparing 0.20.0 release.

2008-02-05  kitone  <kitone@gna.org>

	* src/actions/About.cc:
	Fix new website url.
